# deepfake-data-tool-dashboard

./: .gitignore  README.md  dashboard.py  pyproject.toml
.streamlit/: config.toml
scripts/: generate_sample_data.py
src/: __init__.py  detection.py  ingestion.py  metadata.py  pipeline.py  preprocessing.py  schemas.py  storage.py  validation.py
tests/: test_pipeline.py
